fix: fix jumping scrollbar issue

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -270,3 +270,21 @@ body {
     opacity: 0;
   }
 }
+
+html {
+  overflow-y: scroll;
+}
+
+:root {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+:root body {
+  position: absolute;
+}
+
+body {
+  width: 100vw;
+  overflow: hidden;
+}
